# job-rs

./: .gitignore  Cargo.toml  README.md  tagging
src/: console_printer.rs  domain.rs  file_printer.rs  main.rs  printer.rs  tag.rs
src/domain/: company.rs  job.rs
src/sourcer/: mod.rs  programmers.rs  sourcer.rs
