[package]
name = "job-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", feature = ["derive"], features = ["derive"] }
glob = "0.3.1"
reqwest = { version = "0.11.14", features = ["json", "blocking"] }
serde_json = "1.0.91"
tokio = { version = "1.24.2", features = ["macros", "rt-multi-thread"] }
